--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="container">
       <main class="cards">
         <section class="card__brand">
-          <img src="./images/logo.svg" alt="" class="logo" />
+          <img src="./images/logo.svg" alt="logo" class="logo" />
           <div class="card__icons">
             <div class="icon__bg">
               <img
